add: animal DAL

--- a/BT1/BT1.csproj
+++ b/BT1/BT1.csproj
@@ -46,7 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnimalDAL.cs" />
     <Compile Include="Class\Animal.cs" />
+    <Compile Include="DataObject\GridDO.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
