--- a/BT1/BT1.csproj
+++ b/BT1/BT1.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AnimalDAL.cs" />
+    <Compile Include="AnimalHandler.cs" />
     <Compile Include="Class\Animal.cs" />
     <Compile Include="DataObject\GridDO.cs" />
     <Compile Include="Form1.cs">
